--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <main>
@@ -30,8 +30,9 @@
               placeholder="Nombre de la tarea"
               class="inputForm"
               autocomplete="off"
+              data-form-imput
             />
-            <button type="submit" class="btnCreate">
+            <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
@@ -47,5 +48,6 @@
         </ul>
       </div>
     </main>
+    
   </body>
 </html>
