--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TO DO App</title>
+    <title>TODO App</title>
     <link rel="icon" type="image/png" href="./assets/rocket.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
+    <script defer type="module" src="script.js"></script>
   </head>
   <body>
     <main>
@@ -30,7 +30,7 @@
               placeholder="Nombre de la tarea"
               class="inputForm"
               autocomplete="off"
-              data-form-imput
+              data-form-input
             />
             <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
@@ -41,6 +41,6 @@
         </ul>
       </div>
     </main>
-    
+   
   </body>
 </html>
